--- a/eletronicos.html
+++ b/eletronicos.html
@@ -4,14 +4,14 @@
 
 	<head>
 		<title>TecBlog - Etrônicos</title>
-		<meta charset="utf-8" />
-		<link rel="stylesheet" type="text/css" href="css/estilo.css" />
+		<meta charset="utf-8">
+		<link rel="stylesheet" type="text/css" href="css/estilo.css">
 
 	</head>
 
 	<body>
 
-		<div id="navegacao">
+		<header id="navegacao">
 			<div id="area">
 				<h1 id="logo"><span class="verde">Tec</span>Blog</h1>
 				<div id="menu">
@@ -21,9 +21,9 @@
 					<a href="eletronicos.html">eletrônicos</a>
 				</div>
 			</div>
-		</div>
+		</header>
 
-		<div id="area-principal">
+		<section id="area-principal">
 			
 			<div id="postagem">
 				<h2>Titulo da postagem (Eletrônicos) </h2>
@@ -36,7 +36,7 @@
 				<span class="postado">Matheus</span>
 			</div>
 
-		</div>
+		</section>
 
 	</body>
 
