--- a/apps.html
+++ b/apps.html
@@ -5,13 +5,14 @@
 	<head>
 		<title>TecBlog - Apps</title>
 		<meta charset="utf-8" />
+		<meta name="viewport" content="width-device-width"> 
 		<link rel="stylesheet" type="text/css" href="css/estilo.css" />
 
 	</head>
 
 	<body>
 
-		<div id="navegacao">
+		<header id="navegacao">
 			<div id="area">
 				<h1 id="logo"><span class="verde">Tec</span>Blog</h1>
 				<div id="menu">
@@ -21,9 +22,9 @@
 					<a href="eletronicos.html">eletrônicos</a>
 				</div>
 			</div>
-		</div>
+		</header>
 
-		<div id="area-principal">
+		<section id="area-principal">
 			
 			<div id="postagem">
 				<h2>Titulo da postagem (apps) </h2>
@@ -36,7 +37,7 @@
 				<span class="postado">Postado por Matheus</span>
 			</div>
 
-		</div>
+		</section>
 
 	</body>
 
