--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 
 	<head>
 		<title>TecBlog - O seu Blog de tecnologia</title>
-		<meta charset="utf-8" />
-		<link rel="stylesheet" type="text/css" href="css/estilo.css" />
+		<meta charset="utf-8">
+		<link rel="stylesheet" type="text/css" href="css/estilo.css">
 
 	</head>
 
 	<body>
 
-		<div id="navegacao">
+		<header id="navegacao">
 			<div id="area">
 				<h1 id="logo"><span class="verde">Tec</span>Blog</h1>
 				<div id="menu">
@@ -21,9 +21,9 @@
 					<a href="eletronicos.html">eletrônicos</a>
 				</div>
 			</div>
-		</div>
+		</header>
 
-		<div id="area-principal">
+		<section id="area-principal">
 			
 			<div id="postagem">
 				<h2>Titulo da postagem </h2>
@@ -56,10 +56,10 @@
 					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc et scelerisque quam. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Praesent nulla turpis, gravida at nunc eu, luctus aliquam justo. Praesent eget risus vehicula, commodo dui in, commodo ante. Nulla egestas varius ipsum, lacinia consequat arcu iaculis vitae. Mauris fermentum at dui aliquet tempor. Duis tempus, nunc non ultricies pulvinar, velit risus dapibus ipsum, quis blandit lorem elit nec felis. Fusce sollicitudin gravida est. Curabitur feugiat porttitor neque, et laoreet ligula tincidunt eget. Nulla quis urna eget turpis ullamcorper vestibulum. Mauris porta vitae erat quis scelerisque.
 				</p>
 
-				<span class="postado">Postado por Matheus</span>
+				<footer class="postado">Postado por Matheus</footer>
 			</div>
 
-		</div>
+		</section>
 
 	</body>
 
